--- a/index.html
+++ b/index.html
@@ -2,12 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <base href="/" />
+
+    <!-- Favicons -->
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <!-- SEO Meta -->
+    <title>Angelo Lanticse-Peralta — 3D Artist & Environment Designer</title>
+    <meta name="description" content="Portfolio of Angelo Lanticse-Peralta — 3D artist, environment/world builder, and creative technologist working in Unity, Unreal, Blender, and VR." />
+    <meta name="keywords" content="Angelo Lanticse-Peralta, 3D Artist, Environment Design, Unity, Unreal, Blender, VR, VRChat, Portfolio, Level Designer, ShopowVR" />
+    <meta name="author" content="Angelo Lanticse-Peralta" />
+    <meta name="theme-color" content="#f5b44a" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Angelo Lanticse-Peralta — 3D Artist & Environment Designer" />
+    <meta property="og:description" content="Explore the digital portfolio of Angelo Lanticse-Peralta — creator of immersive 3D worlds using Unity, Unreal, and Blender." />
+    <meta property="og:image" content="https://shopow.xyz/site-icon-512x512.png" />
+    <meta property="og:url" content="https://shopow.xyz" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@ShopowVR" />
+    <meta name="twitter:creator" content="@ShopowVR" />
+    <meta name="twitter:title" content="Angelo Lanticse-Peralta — 3D Artist & Environment Designer" />
+    <meta name="twitter:description" content="Explore the digital portfolio of Angelo Lanticse-Peralta — creator of immersive 3D worlds using Unity, Unreal, and Blender." />
+    <meta name="twitter:image" content="https://shopow.xyz/site-icon-512x512.png" />
+
 
      <!-- Embedded Font For Instant Load -->
-     <style>
+    <style>
       @font-face {
         font-family: 'Geist';
         font-display: swap;
