--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
     </style>
   </head>
   <body>
+    <noscript>
+      <style>
+        #root {
+          display: none;
+        }
+      </style>
+      <div style="padding:2rem;text-align:center;font-family:sans-serif">
+        This site requires JavaScript to function. Please enable it in your browser settings.
+      </div>
+    </noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
